# hyperfast-book-template

./: .buildinfo  .copier-config.yaml  .gitignore  CHANGELOG.md  CNAME  Makefile  README.md  api.html  copier.yaml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.copier-template/: .gitignore.jinja  Makefile.jinja  pyproject.toml.jinja  {% if documentaion_tool == 'mkdocs' %}mkdocs.yaml{% endif %}.jinja  {% if project_name != 'hyperfast-book-template' %}README.md{% endif %}.jinja
.copier-template/book/: _toc.yml.jinja  index.md.jinja
.github/workflows/: deploy-docs.yaml  prerelease.yaml  release.yaml
_sources/: index.md
