[tool.poetry]
name = "hyperfast-book-template"
version = "0.1.0"
description = "A jupyter-book template that helps you jump start your project"
authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
python-semantic-release = "^7.34.1"
jupyter-black = "^0.3.3"

[tool.poetry.group.book.dependencies]
jupyter-book = "^0.13.2"
matplotlib = "^3.7.0"
numpy = "^1.24.2"
sphinx-inline-tabs = "^2022.1.2b11"
sphinx-proof = "^0.1.3"
sphinx-examples = "^0.0.5"
sphinx-hoverxref = "^1.3.0"
furo = ">=2022.1.1"

[tool.black]
exclude = ['_version.py', 'node_modules', '_build', 'docs', 'tests', 'venv', '.copier-template', '.refs']

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = ".version:VERSION={version}"
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
commit_subject = "chore(release): :rocket: {version} [skip ci]"
prerelease_tag = "rc"
major_on_zero = true
tag_commit = true
changelog_file = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
build_command = false
dist_path = "dist"
hvcs = "github" # hosting version control system, gitlab is also supported
